fix carousel height on mobile

--- a/style.scss
+++ b/style.scss
@@ -82,6 +82,7 @@ h2 {
   }
   @media screen and (max-width: 600px) {
     width: 320px;
+    height: 250px;
   }
 }
 .carousel__controls,
